--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   color-scheme: light dark;
   color: #475569;
 
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
 
   display: flex;
   flex-direction: row;
@@ -25,15 +25,6 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-/* 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-} */
 
 body {
   margin: auto;
@@ -44,5 +35,41 @@ body {
 
   height: 100vh;
   width: 100%;
-  background-color:#F9F9F9;
+  background-color: #f9f9f9;
+}
+
+.swiper-button-prev {
+  background-image: url("../src/assets/prev.svg");
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: center;
+}
+
+.swiper-button-prev:hover {
+  scale: 1.2;
+  fill: #f9f9f9;
+}
+
+.swiper-button-prev::after {
+  display: none;
+}
+
+.swiper-button-next{
+  background-image: url("../src/assets/next.svg");
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: center;
+}
+
+.swiper-button-next:hover {
+  scale: 1.2;
+  fill: #f9f9f9;
+}
+
+.swiper-button-next::after {
+  display: none;
+}
+
+.swiper-pagination-bullet {
+    background-color: #f9f9f9;
 }
